react-app-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app-deploy
  labels:
    name: react-app-deploy
    app: demo-react-app
spec:
  replicas: 6
  selector:
    matchLabels:
      name: react-app-pod
      app: demo-react-app
  template:
    metadata:
      name: react-app-pod
      labels:
        name: react-app-pod
        app: demo-react-app
    spec:
      containers:
      - name: react-app
        image: ddaniel1128/mederi_react_container:v1
        resources:
          limits:
            memory: 512Mi
            cpu: 2
          requests:
            memory: 256Mi
            cpu: '0.2'
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          timeoutSeconds: 30

  strategy:
    # RollingUpdate or Recreate
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
