react-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
  labels:
    name: react-service
    app: demo-react-app
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30004
  selector:
    name: react-app-pod
    app: demo-react-app
